--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Querés ser mi San Valentín? ❤️</title>
+    <title>¿Querés salir en San Valentín? </title>
     <style>
         :root {
             --rosa-suave: #ffb3c1;
@@ -118,7 +118,7 @@
 
     <div id="pantalla-inicio" class="container">
         <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdnlsb2swNTBkaG5waGdnNXNza2s0NXprZWdhdHlrZHpzMGUwdm0ydSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/IU5ApmC4e6wEw/giphy.gif" alt="Gif Pregunta">
-        <h1>¿Querés salir en San Valentín? ❤️</h1>
+        <h1>¿Querés salir en San Valentín? </h1>
         <div class="botones">
             <button id="btn-si" onclick="aceptar()">¡SÍ!</button>
             <button id="btn-no" onmouseover="intentarNo()" onclick="intentarNo()">No</button>
@@ -127,7 +127,7 @@
 
     <div id="pantalla-final" class="container">
         <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExZzZ1OGx6Zmdqbnk1NmUyYXl4dnBrZmtncnN6Z2V1NHFwZ2ZrNzRuaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ytu2GUYbvhz7zShGwS/giphy.gif" alt="Gif Celebración">
-        <h1>¡Gracias por aceptar tomatito! </h1>
+        <h1>¡Gracias por aceptar tomatito! 🍅 </h1>
         <div class="ticket">
             <p>📅 <strong>Sábado 14 de febrero</strong></p>
             <p>📍 El Café de Acá</p>
@@ -206,4 +206,5 @@
 </body>
 
 </html>
+
 
